--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sora",
+  "name": "slip",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -16,7 +16,9 @@
     "expo-document-picker": "~13.0.2",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.4",
+    "expo-print": "^14.0.3",
     "expo-router": "^4.0.17",
+    "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
@@ -29,7 +31,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
-    "sora": "file:"
+    "slip": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
