--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.2.0",
     "expo": "^52.0.27",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.4",
